--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />  
     
-    <title>LaVilla</title>
+    <title>Diamonda</title>
   </head>
   <body>
     <div id="root"></div>
